Create UpdateEvent Api
